# datamodel_fiddk

./: .gitignore  README.md  fiddk.ttl  pyproject.toml  todo.md
documentation/: DataModel_FIDDK_de.md
src/fiddk_validater/: __init__.py  cli.py  luigi_tasks.py  validator.py
src/fiddk_validater/shapes/: ProvidedCHO.ttl  fiddk.ttl
src/fiddk_validator/: __init__.py  cli.py  luigi_tasks.py  validator.py
src/fiddk_validator/shapes/: Aggregation.ttl  Concept.ttl  Event.ttl  Organization.ttl  Person.ttl  Place.ttl  ProvidedCHO.descriptive.ttl  ProvidedCHO.relations.ttl  ProvidedCHO.roles.ttl  ProvidedCHO.ttl  TimeSpan.ttl  WebResource.ttl
tests/: test_luigi_task.py  test_pref_label_constraints.py  test_validation_edm.py
tests/data/edm/invalid/: missing_required.ttl
tests/data/edm/valid/: minimal.ttl  rich.ttl
