[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "fiddk_validater"
version = "0.1.0"
description = "Validierung von FID RDF-Daten (pySHACL) inkl. Luigi-Task und CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jan Smendek" }]
dependencies = [
  "rdflib>=6.2",
  "pyshacl>=0.24",
  "luigi>=3.4",
  "ruff>=0.4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[project.scripts]
fiddk-validate = "fiddk_validater.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fiddk_validater"]
include = ["src/fiddk_validater/shapes/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["fiddk_validater"]
